css/styles.css
:root {
  --white: #fff;
  --grey: #ccc;
  --red: red;
}
@font-face {
  font-family: Monoton;
  font-style: normal;
  font-weight: 400;
  font-display: fallback;
  src: url("../fonts/monoton-latin/monoton-v10-latin-regular.woff2")
    format("woff2");
}
@font-face {
  font-family: "Nunito Sans";
  font-style: normal;
  font-weight: 400;
  font-display: fallback;
  src: url("../fonts/nunito-sans-latin/nunito-sans-v6-latin-regular.woff2")
    format("woff2");
}
@keyframes upper {
  0%,
  100%,
  19.999%,
  22%,
  62.999%,
  64%,
  64.999%,
  70% {
    opacity: 0.99;
    text-shadow: 0 0 100px #fff, 0 0 50px #fff, 0 0 26px #fff;
  }
  20%,
  21.999%,
  63%,
  63.999%,
  65%,
  69.999% {
    opacity: 0.4;
    text-shadow: none;
  }
}
@keyframes lower {
  0%,
  100%,
  12%,
  18.999%,
  23%,
  31.999%,
  37%,
  44.999%,
  46%,
  49.999%,
  51%,
  58.999%,
  61%,
  68.999%,
  71%,
  85.999%,
  96% {
    opacity: 0.99;
    /* text-shadow: 0 0 80px red, 0 0 30px #b22222, 0 0 6px #8b0000; */
    /* text-shadow: 0 0 80px #fff, 0 0 30px #fff, 0 0 6px #fff; */
    /* text-shadow: 0 0 80px #c1e1c1, 0 0 30px #c1e1c1, 0 0 6px #c1e1c1; */
    text-shadow: 0 0 80px #77dd77, 0 0 30px #77dd77, 0 0 6px #77dd77;
  }
  19%,
  22.99%,
  32%,
  36.999%,
  45%,
  45.999%,
  50%,
  50.99%,
  59%,
  60.999%,
  69%,
  70.999%,
  86%,
  95.999% {
    opacity: 0.4;
    text-shadow: none;
  }
}
body {
  font-family: "Nunito Sans", Arial, Helvetica, sans-serif;
  /* background: #1f1f23; */
  background: #000;
  width: 100vw;
  max-width: 100%;
  height: 100%;
}
.navbar {
  padding: 0.4rem 0;
  background-color: var(--white);
  width: 100%;
  z-index: 5;
  position: relative;
}
.navbar-inner-container {
  width: 100%;
  margin: auto;
  background-color: var(--white);
}
.toggle-box {
  width: 90%;
  margin: auto;
}
.navbar-toggle {
  background-color: var(--white);
  border: 1px solid #e7e7e7;
  padding: 0.5rem 0.9rem;
  font-size: 1.25rem;
  border-radius: 0.25rem;
}
.hamburger-icon {
  width: 1.8rem;
}
.navbar-dropdown {
  width: 100%;
  margin: auto;
  max-height: 0;
  overflow: hidden;
  transition: 0.2s linear;
  position: absolute;
  z-index: 5;
  background-color: var(--white);
}
.navbar-list {
  width: 80%;
  margin: auto;
}
.nav-link {
  font-size: 1rem;
  text-transform: uppercase;
  color: rgba(0, 0, 0, 0.5);
  letter-spacing: 0.2em;
  padding: 1.4rem 0;
  font-weight: 500;
  display: block;
}

.resume-link {
  font-size: 1rem;
  text-transform: uppercase;
  color: rgba(0, 0, 0, 0.5);
  letter-spacing: 0.2em;
  padding: 1.4rem 0;
  font-weight: 500;
  display: block;
}
.showDropdown {
  opacity: 1;
  height: 19.7rem;
  max-height: 23rem;
  padding: 1rem 0;
}
.noScroll {
  height: 100vh;
  overflow: hidden;
}
.neon-box {
  font-size: 1.8rem;
  font-family: Monoton, sans-serif;
  text-align: center;
  /* text-shadow: 0 0 100px red, 0 0 50px #b22222, 0 0 26px #8b0000; */
  /* text-shadow: 0 0 100px #fff, 0 0 50px #fff, 0 0 26px #fff; */
  /* text-shadow: 0 0 80px #c1e1c1, 0 0 30px #c1e1c1, 0 0 6px #c1e1c1; */
  text-shadow: 0 0 80px #77dd77, 0 0 30px #77dd77, 0 0 6px #77dd77;

  /* color: red; */
  /* color: #fff; */
  /* color: #c1e1c1; */
  color: #77dd77;
}
#name {
  color: #fff;
  text-shadow: 0 0 100px #fff, 0 0 50px #fff, 0 0 26px #fff;
}
#name span {
  animation: upper 11s linear infinite;
}
.software-text span:nth-of-type(2) {
  animation: lower 10s linear infinite;
}
.developer-text span:first-of-type {
  animation: lower 8s linear infinite;
}
.software-text span:first-of-type {
  text-shadow: none;
  opacity: 0.4;
}
.developer-text,
.name,
.software-text {
  font-size: 1.5rem;
}
.developer-text,
.name {
  padding-bottom: 1.5rem;
}
.software-text {
  padding-bottom: 0.7rem;
}

.button-box {
  width: 70%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: auto;
  max-width: 300px;
  padding-top: 0.7rem;
}
.neon-box-btn,
.resume-box-btn {
  width: 2rem;
  height: 1.7rem;
  background-color: var(--white);
  transition: 0.2s all ease;
  padding: 0.3rem;
  border-radius: 3px;
}

.resume-box-btn {
  width: 2.5rem;
  height: 2.3rem;
  background-color: var(--white);
  transition: 0.2s all ease;
  padding: 0.4rem;
  border-radius: 3px;
}
.contact-icons-hero {
  object-fit: contain;
  width: 1.5rem;
  margin: auto;
  height: 100%;
  display: block;
}

.resume-icon-inner {
  object-fit: contain;
  width: 2.1rem;
  margin: auto;
  height: 100%;
  display: block;
}
.hero-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: -1;
}
.hero-container::before {
  content: "";
  position: absolute;
  width: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.5);
}
.hero-img {
  width: 100vw;
  max-width: 100%;
  object-fit: cover;
  background-repeat: no-repeat;
  overflow: hidden;
  /* height: 24rem; */
  height: 28.5rem;
  max-height: 550px;
}
.hero-info-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  margin-top: 6rem;
}
.hero-info-box {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  /* margin-top: 4rem; */
}
.projects-container {
  /* margin-top: 8.5rem; */
  /* margin-top: 9.8rem; */
  margin-top: 11rem;
  max-width: 1500px;
}
.section-header {
  text-align: center;
  font-family: Monoton, sans-serif;
  text-shadow: 0 0 4px #fff, 0 0 50px #fff, 0 0 26px #fff;
  color: var(--white);
  font-size: 1.3rem;
  font-weight: 200;
}
.section-header-span {
  /* text-shadow: 0 0 100px red, 0 0 50px #b22222, 0 0 26px #8b0000;
  color: var(--red); */
  /* text-shadow: 0 0 100px white, 0 0 50px #fff, 0 0 26px #fff; */
  /* color: var(--white); */
  /* text-shadow: 0 0 100px #c1e1c1, 0 0 50px #c1e1c1, 0 0 26px #c1e1c1;
  color: #c1e1c1; */

  text-shadow: 0 0 80px #77dd77, 0 0 30px #77dd77, 0 0 6px #77dd77;
  color: #77dd77;
}
.projects-row {
  width: 90%;
  margin: 4.5rem auto 0;
}
/* ... */

